# src/controller/user.ts
@@ -1,8 +1,20 @@
 import { NextFunction, Request, Response } from "express";
-import config from "../config/config";
-import { addLogin, getUserByEmail, IUser } from "../db/user";
-import { getToken } from "../lib/auth";
-import { decrypt, getIp, isPassword } from "../lib/security";
+import config, { ISecurity } from "../config/config";
+import {
+  addLogin,
+  firstLoginToken,
+  getUserByEmail,
+  IUser,
+  IUserLoginHistory,
+} from "../db/user";
+import { getToken, ITokenArray } from "../lib/auth";
+import {
+  decrypt,
+  encript,
+  getIp,
+  getRandomToken,
+  isPassword,
+} from "../lib/security";
 import { reqPost } from "../vo/parser";
 import { createError, createPayload, IPayload } from "../vo/payload";
 
@@ -14,7 +26,8 @@ export const login = async (
   res: Response,
   next: NextFunction
 ) => {
-  const payload: IPayload<string> = createPayload<string>();
+  const payload: IPayload<{ token: string; key: string }> =
+    createPayload<{ token: string; key: string }>();
   try {
     const email = reqPost<string>(req, "email");
     const pwd = reqPost<string>(req, "pwd");
@@ -33,9 +46,13 @@ export const login = async (
         const ps1: boolean = decrypt(info.pwd) === pwd;
         if (ps || ps1) {
           const ip: Array<string> = getIp(req).split(".");
-          await addLogin(info.useridx, ip);
+          const token: string = getRandomToken();
+          await addLogin(info.useridx, token, ip);
           payload.result = true;
-          payload.data = getToken(info.useridx);
+          payload.data = {
+            token: getToken(info.useridx),
+            key: encript(token),
+          };
         } else {
           payload.error = createError(203, "비밀번호를 확인해 주세요.");
         }
@@ -56,14 +73,21 @@ export const securityKey = async (
   res: Response,
   next: NextFunction
 ) => {
-  const payload: IPayload<{ key: string; slice: number }> =
-    createPayload<{ key: string; slice: number }>();
+  const payload: IPayload<ISecurity> = createPayload<ISecurity>();
   try {
-    payload.result = true;
-    payload.data = {
-      key: config.security.key,
-      slice: config.security.slice,
-    };
+    const key = reqPost<string>(req, "key");
+    const info = req.context[0];
+    const loginInfo = await firstLoginToken(info.token.idx);
+    if (decrypt(key as string) === (loginInfo as IUserLoginHistory).token) {
+      payload.result = true;
+      payload.data = {
+        key: config.security.key,
+        slice: config.security.slice,
+        algorithm: config.security.algorithm,
+      } as ISecurity;
+    } else {
+      payload.error = createError(203, "Key 일치 안함");
+    }
   } catch (err) {
     res.status(500);
     payload.error = createError(100, "서버내부 에러", err);
